particles added to background

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,11 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <link
-      href="https://fonts.googleapis.com/css?family=Cormorant+SC|Eczar:500"
+      href="https://fonts.googleapis.com/css?family=Raleway"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Special+Elite"
       rel="stylesheet"
     />
     <title>React App</title>
